@@ -27,15 +27,17 @@ fn wait_fd(fd: RawFd, events: EventFlags, timeout: Duration) -> io::Result<()> {
 
     let milliseconds = timeout.as_secs() as i64 * 1000 + i64::from(timeout.subsec_nanos()) / 1_000_000;
     #[cfg(target_os = "linux")]
-    let wait = {
+    let wait_res = {
         let timespec = TimeSpec::milliseconds(milliseconds);
         nix::poll::ppoll(fds.as_mut_slice(), timespec, SigSet::empty())
-            .map_err(|_| io::Error::new(io::ErrorKind::Other, "ppoll failed"))?
     };
     #[cfg(not(target_os = "linux"))]
-    let wait = nix::poll::poll(fds.as_mut_slice(), milliseconds as nix::libc::c_int)
-        .map_err(|_| io::Error::new(io::ErrorKind::Other, "poll failed"))?;
+    let wait_res = nix::poll::poll(fds.as_mut_slice(), milliseconds as nix::libc::c_int);
 
+    let wait = match wait_res {
+        Ok(r) => r,
+        Err(e) => return Err(io::Error::from(::Error::from(e))),
+    };
     // All errors generated by poll or ppoll are already caught by the nix wrapper around libc, so
     // here we only need to check if there's at least 1 event
     if wait != 1 {
